Added screenshots and project summary

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
               Shop Now
             </button>
           </div>
-          <!-- Repeat for each product-card -->
+          <!-- Repeat for each product-cards -->
           <div
             class="bg-white rounded shadow-lg p-5 hover:shadow-xl transition duration-300"
           >
             <img
-              src="/assets/img/img1.jpg"
+              src="/assets/img/img5.jpg"
               alt="Shoe 1"
               class="w-full h-60 object-cover rounded mb-4"
             />
@@ -147,7 +147,7 @@
             class="bg-white rounded shadow-lg p-5 hover:shadow-xl transition duration-300"
           >
             <img
-              src="/assets/img/img2.jpg"
+              src="/assets/img/img6.jpg"
               alt="Shoe 1"
               class="w-full h-60 object-cover rounded mb-4"
             />
@@ -165,7 +165,7 @@
             class="bg-white rounded shadow-lg p-5 hover:shadow-xl transition duration-300"
           >
             <img
-              src="/assets/img/img3.jpg"
+              src="/assets/img/img7.jpg"
               alt="Shoe 1"
               class="w-full h-60 object-cover rounded mb-4"
             />
@@ -183,7 +183,7 @@
             class="bg-white rounded shadow-lg p-5 hover:shadow-xl transition duration-300"
           >
             <img
-              src="/assets/img/img4.jpg"
+              src="/assets/img/img8.jpg"
               alt="Shoe 1"
               class="w-full h-60 object-cover rounded mb-4"
             />
